--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/jungle-9444.jpg" alt="">
+		  <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=132136350827965">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/jungle-9444.jpg" alt="">
+		  </a>
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
