--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a class="nav-link js-scroll-trigger" href="#about">關於</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#home">全家福</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">作品</a>
           </li>
           <li class="nav-item">
@@ -74,7 +77,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
+  <section id="home" class="projects-section bg-light">
     <div class="container">
 
       <!-- Featured Project Row -->
@@ -93,7 +96,7 @@
       </div>
 
       <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div id="projects"  class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
         </div>
