--- a/index.html
+++ b/index.html
@@ -77,21 +77,38 @@
   </section>
 
   <!-- Projects Section -->
-  <section class="projects-section bg-light">
+  <section id="home" class="projects-section bg-light">
     <div class="container">
+
+      <!-- Featured Project Row -->
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-8 col-lg-7">
+		  <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=132136350827965">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/jungle-9444.jpg" alt="">
+		  </a>
+        </div>
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>全家福</h4>
+            <p class="text-black-50 mb-0">作品簡介</p>
+          </div>
+        </div>
+      </div>
+	  
+	  
 	<!-- 全家福 -->
-      <div id="home" class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div id="projects"  class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
+          <img class="img-fluid" src="img/img/jungle-9444.jpg" alt="">
         </div>
 		
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
+          <img class="img-fluid" src="img/img/jungle-9444.jpg" alt="">
         </div>
       </div>
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
+          <img class="img-fluid" src="img/img/jungle-9444.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
