--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
 	<!-- 全家福 -->
       <div id="projects"  class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/img/jungle-9444.jpg" alt="">
+          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
         </div>
 		
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/img/jungle-9444.jpg" alt="">
+        <div class="col-lg-6 order-lg-first">
+          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
         </div>
       </div>
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/img/jungle-9444.jpg" alt="">
+          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
