--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	  
 	  
 	<!-- 全家福 -->
-      <div id="projects"  class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
         </div>
