--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body id="page-top">
 
-  <!-- Navigation -->
+  <!-- 導覽頁 -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">樂攝 - 影像聚集所</a>
@@ -72,16 +72,16 @@
           <p class="text-white-50">Jungle老師攝影年資15年以上，專精各類拍攝，為人善良正直，擁有精緻的外表，面惡心善幽默風趣 - Jason老師，年資五年以上，專精動靜態，身體微胖皮膚略黑，外號高雄南區彭于晏，風靡少女零個</p>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="img/首頁簡介-1.png" class="img-fluid" alt="">
     </div>
   </section>
 
   <!-- Projects Section -->
-  <section id="home" class="projects-section bg-light">
+  <section class="projects-section bg-light">
     <div class="container">
 
-      <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <!-- 全家福大綱 -->
+      <div id="home" class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
 		  <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=132136350827965">
             <img class="img-fluid mb-3 mb-lg-0" src="img/jungle-9444.jpg" alt="">
@@ -96,7 +96,7 @@
       </div>
 	  
 	  
-	<!-- 全家福 -->
+	<!-- 全家福內頁看更多 -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
