--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div id="home" class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
 		
-		<iframe src="https://www.youtube.com/embed/jczqdyfIWnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/jczqdyfIWnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 		<!--
 		  <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=132136350827965">
