--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1 class="mx-auto my-0 text-uppercase">樂攝</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">看似簡單卻高度質感 <br> 樂攝影像|各類動靜態|場地租借</h2>
 		
-        <h2 class="mx-auto mt-2 mb-5" style="color:#a83832;">活動公告<br><span style="color:#FFF;">88節全家福</span></h2>
+        <h2 class="mx-auto mt-2 mb-5" style="color:#a83832;">活動公告<br><span style="color:#FFF;"><a href="https://www.facebook.com/LeShePhoto/photos/a.132136350827965/376990233009241/?type=3&theater">88節全家福</a></span></h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
       </div>
     </div>
