新增藝術閨蜜

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="#home">全家福</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">作品</a>
+            <a class="nav-link js-scroll-trigger" href="#friend">藝術閨蜜</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">聯絡</a>
