--- a/index.html
+++ b/index.html
@@ -42,7 +42,31 @@
             <a class="nav-link js-scroll-trigger" href="#home">全家福</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#friend">藝術閨蜜</a>
+            <a class="nav-link js-scroll-trigger" href="#friend">藝術/閨蜜</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#Wedding photos">質感婚紗</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#Wedding ">婚禮紀錄</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#Wedding video">婚禮微電影</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#Love video">愛情微電影</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#business video">商業短片</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#activity video">活動紀錄</a>
+          </li>
+		   <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#baby">孕媽咪/寶寶</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#food">食品攝影</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">聯絡</a>
@@ -129,7 +153,7 @@
       </div>
 	  
       <!-- Project One Row -->
-      <div id="projects"  class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div id="friend"  class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
         </div>
