更改導覽列

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="#home">全家福</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#friend">藝術/閨蜜</a>
+            <a class="nav-link js-scroll-trigger" href="#friend">藝術閨蜜</a>
           </li>
 		  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#Wedding photos">質感婚紗</a>
@@ -63,7 +63,7 @@
             <a class="nav-link js-scroll-trigger" href="#activity video">活動紀錄</a>
           </li>
 		   <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#baby">孕媽咪/寶寶</a>
+            <a class="nav-link js-scroll-trigger" href="#baby">孕媽咪寶寶</a>
           </li>
 		  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#food">食品攝影</a>
