--- a/index.html
+++ b/index.html
@@ -122,23 +122,23 @@
 	<!-- 全家福內頁看更多 -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
+          <img class="img-fluid" src="img/CHIE0662.jpg" alt="">
         </div>
 		
         <div class="col-lg-6 order-lg-first">
-          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
+          <img class="img-fluid" src="img/IMG_1040.jpg" alt="">
         </div>
       </div>
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/jungle-9444.jpg" alt="">
+          <img class="img-fluid" src="img/CHIE0746.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">全家福</h4>
-                <p class="mb-0 text-white-50">全家福簡介 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=132136350827965">看更多</a></p>
+                <p class="mb-0 text-white-50">全家福簡介 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384884345553163">看更多</a></p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
