更新全家福文案

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>全家福</h4>
-            <p class="text-black-50 mb-0">作品簡介</p>
+            <p class="text-black-50 mb-0">唯有紀錄唯有影像，才能保留住最初的你，最美的自己，最自然的我們</p>
           </div>
         </div>
       </div>
@@ -146,44 +146,51 @@
         </div>
       </div>
 	  
-      <!-- Project One Row -->
-      <div id="friend"  class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+      <!-- 藝術閨蜜大綱 -->
+ <div id="home" class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-8 col-lg-7">
+		
+		
+		  <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=132136350827965">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/jungle-9444.jpg" alt="">
+		  </a>
+		 
         </div>
-        <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">作品二標題</h4>
-                <p class="mb-0 text-white-50">作品二簡介</p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
-            </div>
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>藝術閨蜜</h4>
+            <p class="text-black-50 mb-0">作品簡介</p>
           </div>
         </div>
       </div>
-
-      <!-- Project Two Row -->
+	  
+	  
+	<!-- 藝術閨蜜內頁看更多 -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/CHIE0662.jpg" alt="">
+        </div>
+		
+        <div class="col-lg-6 order-lg-first">
+          <img class="img-fluid" src="img/IMG_1040.jpg" alt="">
+        </div>
+      </div>
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="img/CHIE0746.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">作品三標題</h4>
-                <p class="mb-0 text-white-50">作品三簡介</p>
+                <h4 class="text-white">全家福</h4>
+                <p class="mb-0 text-white-50">全家福簡介 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384884345553163">看更多</a></p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
           </div>
         </div>
       </div>
-
-    </div>
-  </section>
 
   <!-- Signup Section -->
   <!--
