更改藝術閨蜜連結

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
 	  
       <!-- 藝術閨蜜大綱 -->
- <div id="home" class="row align-items-center no-gutters mb-4 mb-lg-5">
+ <div id="friend" class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
 		
 		
