大綱更改照片

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		
 		
 		  <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=132136350827965">
-            <img class="img-fluid mb-3 mb-lg-0" src="jungle-7294.jpg" alt="">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/jungle-7294.jpg" alt="">
 		  </a>
 		 
         </div>
