--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">全家福</h4>
-                <p class="mb-0 text-white-50">全家福簡介 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384884345553163">看更多</a></p>
+                <p class="mb-0 text-white-50">全家福作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384884345553163">看更多</a></p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -178,7 +178,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">藝術閨蜜</h4>
-                <p class="mb-0 text-white-50">藝術閨蜜 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=385208035520794">看更多</a></p>
+                <p class="mb-0 text-white-50">藝術閨蜜作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=385208035520794">看更多</a></p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
