質感婚紗新增

--- a/index.html
+++ b/index.html
@@ -181,6 +181,44 @@
                 <p class="mb-0 text-white-50">藝術閨蜜作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=385208035520794">看更多</a></p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
+	<!-- 質感婚紗大綱 -->
+ <div id="Wedding photos" class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-8 col-lg-7">  
+            <img class="img-fluid mb-3 mb-lg-0" src="img/IMG_1171.jpg" alt="">
+		  </a>
+		 
+        </div>
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>質感婚紗</h4>
+            <p class="text-black-50 mb-0">作品簡介</p>
+          </div>
+        </div>
+      </div>
+	  
+	  
+	<!-- 質感婚紗內頁看更多 -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/CHIE4025.jpg" alt="">
+        </div>
+		
+        <div class="col-lg-6 order-lg-first">
+          <img class="img-fluid" src="img/CHIE7556.jpg" alt="">
+        </div>
+      </div>
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/﹝S02118﹞3.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">質感婚紗</h4>
+                <p class="mb-0 text-white-50">質感婚紗作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384886808886250">看更多</a></p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
             </div>
           </div>
         </div>
