新增固定葉面

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
   </section>-->
   
   <!-- Contact Section -->
+  <div class="relative">
   <section id="contact"  class="contact-section bg-black">
     <div class="container">
 
@@ -303,7 +304,7 @@
 
     </div>
   </section>
-
+   <div class="relative">
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
