--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <div class="container">
 
       <!-- 全家福大綱 -->
+	  <div class="Position:static">
       <div id="home" class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
             <img class="img-fluid mb-3 mb-lg-0" src="img/jungle-9444.jpg" alt="">
@@ -245,7 +246,6 @@
   </section>-->
   
   <!-- Contact Section -->
-  <div class="relative">
   <section id="contact"  class="contact-section bg-black">
     <div class="container">
 
@@ -321,7 +321,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
-  <div class="relative">
+  <div class="Position:static">
 </body>
   
 
