--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section class="projects-section bg-light">
+  <section class="projects">
     <div class="container">
 
       <!-- 全家福大綱 -->
@@ -219,6 +219,7 @@
                 <p class="mb-0 text-white-50">質感婚紗作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384886808886250">看更多</a></p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
+	<section class="projects">
             </div>
           </div>
         </div>
