--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
+  <section class="projects">
 </body>
   
 
