更新縮排及</div>和</section>

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
   </nav>
 
-  <!-- Header -->
+  <!-- 首頁最上面和活動公告 -->
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
@@ -83,18 +83,18 @@
     </div>
   </header>
 
-  <!-- About Section -->
-  <section id="about" class="about-section text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">樂攝影像聚集所</h2>
-          <p class="text-white-50">Jungle老師攝影年資15年以上，專精各類拍攝，為人善良正直，擁有精緻的外表，面惡心善幽默風趣 - Jason老師，年資五年以上，專精動靜態，身體微胖皮膚略黑，外號高雄南區彭于晏，風靡少女零個</p>
-        </div>
-      </div>
-      <img src="img/首頁簡介-1.png" class="img-fluid" alt="">
-    </div>
-  </section>
+  <!-- Jungle和Jason簡介 -->
+	<section id="about" class="about-section text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 mx-auto">
+					<h2 class="text-white mb-4">樂攝影像聚集所</h2>
+					<p class="text-white-50">Jungle老師攝影年資15年以上，專精各類拍攝，為人善良正直，擁有精緻的外表，面惡心善幽默風趣 - Jason老師，年資五年以上，專精動靜態，身體微胖皮膚略黑，外號高雄南區彭于晏，風靡少女零個</p>
+				</div>
+			</div>
+			<img src="img/首頁簡介-1.png" class="img-fluid" alt="">
+		</div>
+	</section>
 
   <!-- Projects Section -->
 	<section class="projects">
@@ -154,45 +154,36 @@
 			</div>
 		</div>
 	  
-	  
-<<<<<<< HEAD
 <!-- 藝術閨蜜內頁看更多 -->
 		<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
 			<div class="col-lg-6">
 				<img class="img-fluid" src="img/IMG_0336.jpg" alt="">
 			</div>
-=======
-	<!-- 質感婚紗內頁看更多 -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/CHIE4025.jpg" alt="">
-        </div>
-		
-        <div class="col-lg-6 order-lg-first">
-          <img class="img-fluid" src="img/CHIE7556.jpg" alt="">
-        </div>
-      </div>
-      <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/﹝S02118﹞3.jpg" alt="">
-        </div>
-        <div class="col-lg-6 order-lg-first">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">質感婚紗</h4>
-                <p class="mb-0 text-white-50">質感婚紗作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384886808886250">看更多</a></p>
-                <hr class="d-none d-lg-block mb-0 mr-0">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
->>>>>>> origin/master
-
+			<div class="col-lg-6 order-lg-first">
+				<img class="img-fluid" src="img/CHIE7556.jpg" alt="">
+			</div>
+		</div>
+		<div class="row justify-content-center no-gutters">
+			<div class="col-lg-6">
+				<img class="img-fluid" src="img/﹝S02118﹞3.jpg" alt="">
+			</div>
+			<div class="col-lg-6 order-lg-first">
+				<div class="bg-black text-center h-100 project">
+					<div class="d-flex h-100">
+						<div class="project-text w-100 my-auto text-center text-lg-right">
+							<h4 class="text-white">質感婚紗</h4>
+							<p class="mb-0 text-white-50">質感婚紗作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384886808886250">看更多</a></p>
+							<hr class="d-none d-lg-block mb-0 mr-0">
+						</div>
+					</div>
+				</div>
+			</div>			
 			<div class="col-lg-6 order-lg-first">
 				<img class="img-fluid" src="img/jungle-6821.jpg" alt="">
 			</div>
+		</div>
+		
+
 		</div>
 
 		<div class="row justify-content-center no-gutters">
@@ -252,77 +243,71 @@
 				</div>
 			</div>
 		</div>
+		
+		
+		
+		
+		
+		
+	</section>		
+	
+	
+  <!-- 下面開始是聯絡資訊 -->
+<section id="contact"  class="contact-section bg-black">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 mb-3 mb-md-0">
+				<div class="card py-4 h-100">
+					<div class="card-body text-center">
+						<i class="fas fa-map-marked-alt text-primary mb-2"></i>
+						<h4 class="text-uppercase m-0">地址</h4>
+						<hr class="my-4">
+						<div class="small text-black-50">高雄市三民區中華二路190號</div>
+					</div>
+				</div>
+			</div>
 
-<<<<<<< HEAD
-	  
-  <!-- 聯絡資訊 -->
-=======
-        </div>
-      </div>
-    </div>
- <section class="projects">
- 
-  
-  <!-- Contact Section -->
->>>>>>> origin/master
-  <section id="contact"  class="contact-section bg-black">
-    <div class="container">
+			<div class="col-md-4 mb-3 mb-md-0">
+				<div class="card py-4 h-100">
+					<div class="card-body text-center">
+						<i class="fas fa-envelope text-primary mb-2"></i>
+						<h4 class="text-uppercase m-0">信箱</h4>
+						<hr class="my-4">
+						<div class="small text-black-50">
+						<a href="#">le_she2019@yahoo.com</a>
+					</div>
+					</div>
+				</div>
+			</div>
 
-      <div class="row">
+			<div class="col-md-4 mb-3 mb-md-0">
+				<div class="card py-4 h-100">
+					<div class="card-body text-center">
+						<i class="fas fa-mobile-alt text-primary mb-2"></i>
+						<h4 class="text-uppercase m-0">電話</h4>
+						<hr class="my-4">
+						<div class="small text-black-50">0930 970 032</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">地址</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">高雄市三民區中華二路190號</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">信箱</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">
-                <a href="#">le_she2019@yahoo.com</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">電話</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">0930 970 032</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="social d-flex justify-content-center">
-        <!--<a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
-        </a>
-		-->
-        <a href="https://www.facebook.com/LeShePhoto/" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-		<!--
-        <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
-        </a>
-		-->
-      </div>
-
-    </div>
-  </section>
+		<div class="social d-flex justify-content-center">
+			<!--<a href="#" class="mx-2">
+			<i class="fab fa-twitter"></i>
+			</a>
+			-->
+			<a href="https://www.facebook.com/LeShePhoto/" class="mx-2">
+			<i class="fab fa-facebook-f"></i>
+			</a>
+			<!--
+			<a href="#" class="mx-2">
+			<i class="fab fa-github"></i>
+			</a>
+			-->
+		</div>
+	</div>
+</section>
    
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
