--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					<img class="img-fluid" src="img/IMG_0336.jpg" alt="">
 				</div>
 				<div class="col-lg-6 order-lg-first">
-					<img class="img-fluid" src="img/CHIE7556.jpg" alt="">
+					<img class="img-fluid" src="img/jungle-6821.jpg" alt="">
 				</div>
 			</div>			
 			<div class="row justify-content-center no-gutters">
