--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <a class="nav-link js-scroll-trigger" href="#friend">藝術閨蜜</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#Wedding photos">質感婚紗</a>
+            <a class="nav-link js-scroll-trigger" href="#Wedding_photos">質感婚紗</a>
           </li>
 		  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#Wedding ">婚禮紀錄</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#Wedding video">婚禮微電影</a>
+            <a class="nav-link js-scroll-trigger" href="#Wedding_video">婚禮微電影</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#Love video">愛情微電影</a>
+            <a class="nav-link js-scroll-trigger" href="#Love_video">愛情微電影</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#business video">商業短片</a>
+            <a class="nav-link js-scroll-trigger" href="#business_video">商業短片</a>
           </li>
 		   <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#baby">孕媽咪寶寶</a>
@@ -181,7 +181,7 @@
 			</div>
 	  
 <!-- 質感婚紗大綱 -->
-			<div id="Wedding photos" class="row align-items-center no-gutters mb-4 mb-lg-5">
+			<div id="Wedding_photos" class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-8 col-lg-7">  
 					<img class="img-fluid mb-3 mb-lg-0" src="img/IMG_1171.jpg" alt="">
 				</div>
