更改婚禮紀錄

--- a/index.html
+++ b/index.html
@@ -216,6 +216,41 @@
 								<p class="mb-0 text-white-50">質感婚紗作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384886808886250">看更多</a></p>
 								<hr class="d-none d-lg-block mb-0 mr-0">
 							</div>
+<!-- 婚禮紀錄大綱 -->
+			<div id="Wedding_photos" class="row align-items-center no-gutters mb-4 mb-lg-5">
+				<div class="col-xl-8 col-lg-7">  
+					<img class="img-fluid mb-3 mb-lg-0" src="img/6965.jpg" alt="">
+				</div>
+				<div class="col-xl-4 col-lg-5">
+					<div class="featured-text text-center text-lg-left">
+						<h4>婚禮紀錄</h4>
+						<p class="text-black-50 mb-0">作品簡介</p>
+					</div>
+				</div>
+			</div>
+	  
+	  
+<!-- 婚禮紀錄內頁看更多 -->
+			<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+				<div class="col-lg-6">
+					<img class="img-fluid" src="img/IMG_7372.jpg" alt="">
+				</div>
+
+				<div class="col-lg-6 order-lg-first">
+					<img class="img-fluid" src="img/CHIE1394.jpg" alt="">
+				</div>
+			</div>
+			<div class="row justify-content-center no-gutters">
+				<div class="col-lg-6">
+					<img class="img-fluid" src="img/DA-0183.jpg" alt="">
+				</div>
+				<div class="col-lg-6 order-lg-first">
+					<div class="bg-black text-center h-100 project">
+						<div class="d-flex h-100">
+							<div class="project-text w-100 my-auto text-center text-lg-right">
+								<h4 class="text-white">婚禮紀錄</h4>
+								<p class="mb-0 text-white-50">婚禮紀錄作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=385190882189176">看更多</a></p>
+								<hr class="d-none d-lg-block mb-0 mr-0">
 						</div>
 					</div>
 				</div>
