--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
 								<p class="mb-0 text-white-50">質感婚紗作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384886808886250">看更多</a></p>
 								<hr class="d-none d-lg-block mb-0 mr-0">
 							</div>
-<!-- 婚禮紀錄大綱 -->
+	 </div>
+	</section>
+<!--  婚禮紀錄大綱 -->
 			<div id="Wedding_photos" class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-8 col-lg-7">  
 					<img class="img-fluid mb-3 mb-lg-0" src="img/6965.jpg" alt="">
