--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	 </div>
 	</section>
 <!--  婚禮紀錄大綱 -->
-			<div id="Wedding_photos" class="row align-items-center no-gutters mb-4 mb-lg-5">
+			<div id="#Wedding" class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-8 col-lg-7">  
 					<img class="img-fluid mb-3 mb-lg-0" src="img/6965.jpg" alt="">
 				</div>
