--- a/index.html
+++ b/index.html
@@ -276,7 +276,26 @@
 					<div class="featured-text text-center text-lg-left">
 						<h4>婚禮微電影</h4>
 						<p class="text-black-50 mb-0">作品簡介</p>
-						<div class="col-lg-6 order-lg-first">
+					</div>
+				</div>
+			</div>
+	  
+	  
+<!-- 婚禮微電影內頁看更多 -->
+			<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+				<div class="col-lg-6">
+					<img class="img-fluid" src="img/IMG_7372.jpg" alt="">
+				</div>
+
+				<div class="col-lg-6 order-lg-first">
+					<img class="img-fluid" src="img/CHIE1394.jpg" alt="">
+				</div>
+			</div>
+			<div class="row justify-content-center no-gutters">
+				<div class="col-lg-6">
+					<img class="img-fluid" src="img/DA-0183.jpg" alt="">
+				</div>
+				<div class="col-lg-6 order-lg-first">
 					<div class="bg-black text-center h-100 project">
 						<div class="d-flex h-100">
 							<div class="project-text w-100 my-auto text-center text-lg-right">
@@ -287,7 +306,10 @@
 					</div>
 				</div>
 			</div>
-	  
+		
+		
+		
+		
 		
 		
 
