--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				<div class="col-xl-4 col-lg-5">
 					<div class="featured-text text-center text-lg-left">
 						<h4>藝術閨蜜</h4>
-						<p class="text-black-50 mb-0">作品簡介</p>
+						<p class="text-black-50 mb-0">單人或多人藝術寫真形態紀錄，用不一樣的容貌留住你的青春。</p>
 					</div>
 				</div>
 			</div>
@@ -188,7 +188,7 @@
 				<div class="col-xl-4 col-lg-5">
 					<div class="featured-text text-center text-lg-left">
 						<h4>質感婚紗</h4>
-						<p class="text-black-50 mb-0">作品簡介</p>
+						<p class="text-black-50 mb-0">一生一世只有一次，讓我們把愛請留在畫面裡。</p>
 					</div>
 				</div>
 			</div>
@@ -226,7 +226,7 @@
 				<div class="col-xl-4 col-lg-5">
 					<div class="featured-text text-center text-lg-left">
 						<h4>婚禮紀錄</h4>
-						<p class="text-black-50 mb-0">作品簡介</p>
+						<p class="text-black-50 mb-0">過程不能NG，流程不能重來，眼淚笑容親朋好友由我們幫你整合留念。</p>
 					</div>
 				</div>
 			</div>
@@ -272,7 +272,7 @@
 					<div class="featured-text text-center text-lg-left">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/oLgSEXCCtts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<h4>婚禮微電影</h4>
-						<p class="text-black-50 mb-0">作品簡介</p>
+						<p class="text-black-50 mb-0">過程不能NG，流程不能重來，眼淚笑容親朋好友情感幫你紀錄。</p>
 						<p class="mb-0 text-white-50">婚禮微電影作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
 					</div>
 				</div>
@@ -298,7 +298,7 @@
 					<div class="featured-text text-center text-lg-left">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/aiOL4toLdZg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<h4>愛情微電影</h4>
-						<p class="text-black-50 mb-0">作品簡介</p>
+						<p class="text-black-50 mb-0">邊拍邊玩，躺著拍，坐著拍，躺著玩，坐著玩，就是這樣好玩，留住婚紗的聲音。</p>
 						<p class="mb-0 text-white-50">愛情微電影作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
 					</div>
 				</div>
@@ -325,7 +325,7 @@
 					<div class="featured-text text-center text-lg-left">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/WR7swDny4SY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<h4>商業短片</h4>
-						<p class="text-black-50 mb-0">作品簡介</p>
+						<p class="text-black-50 mb-0">甚麼都拍甚麼都不奇怪，你想的到的我們都做得到</p>
 						<p class="mb-0 text-white-50">商業短片作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
 					</div>
 				</div>
@@ -351,7 +351,7 @@
 				<div class="col-xl-4 col-lg-5">
 					<div class="featured-text text-center text-lg-left">
 						<h4>孕媽咪寶寶</h4>
-						<p class="text-black-50 mb-0">作品簡介</p>
+						<p class="text-black-50 mb-0">女人一輩子最美麗的時光，寶寶最可愛的時刻，用照片寫故事。</p>
 					</div>
 				</div>
 			</div>
