--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
 						<p class="text-black-50 mb-0">一生一世只有一次，讓我們把愛請留在畫面裡。</p>
 					</div>
 				</div>
-			</div>
-	  
+			</div>	  
 	  
 <!-- 質感婚紗內頁看更多 -->
 			<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
@@ -216,8 +215,11 @@
 								<p class="mb-0 text-white-50">質感婚紗作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=384886808886250">看更多</a></p>
 								<hr class="d-none d-lg-block mb-0 mr-0">
 							</div>
-	 </div>
-	</section>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 <!--  婚禮紀錄大綱 -->
 			<div id="Wedding" class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-8 col-lg-7">  
@@ -253,96 +255,45 @@
 								<h4 class="text-white">婚禮紀錄</h4>
 								<p class="mb-0 text-white-50">婚禮紀錄作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=385190882189176">看更多</a></p>
 								<hr class="d-none d-lg-block mb-0 mr-0">
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		
-		
-		
-		
-		
-		
-
-		</div>
-	</section>		
-	
-	<!--  婚禮微電影大綱 -->
+			
+<!--  婚禮微電影大綱 -->
 			<div id="Wedding_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
 					<div class="featured-text text-center text-lg-left">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/oLgSEXCCtts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/oLgSEXCCtts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<h4>婚禮微電影</h4>
 						<p class="text-black-50 mb-0">過程不能NG，流程不能重來，眼淚笑容親朋好友情感幫你紀錄。</p>
 						<p class="mb-0 text-white-50">婚禮微電影作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
 					</div>
-				</div>
-			</div>	    
-						</div>
-					</div>
-				</div>
 			</div>
+			
 		
-		
-		
-		
-		
-		
-
-		</div>
-	</section>	
-	</div>
-	</section>		
-	
-	<!--  愛情微電影大綱 -->
+<!--  愛情微電影大綱 -->
 			<div id="Love_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
-					<div class="featured-text text-center text-lg-left">
+				<div class="featured-text text-center text-lg-left">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/aiOL4toLdZg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						<h4>愛情微電影</h4>
-						<p class="text-black-50 mb-0">邊拍邊玩，躺著拍，坐著拍，躺著玩，坐著玩，就是這樣好玩，留住婚紗的聲音。</p>
-						<p class="mb-0 text-white-50">愛情微電影作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
-					</div>
-				</div>
-			</div>	    
-						</div>
-					</div>
+					<h4>愛情微電影</h4>
+					<p class="text-black-50 mb-0">邊拍邊玩，躺著拍，坐著拍，躺著玩，坐著玩，就是這樣好玩，留住婚紗的聲音。</p>
+					<p class="mb-0 text-white-50">愛情微電影作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
 				</div>
 			</div>
-		
-		
-		
-		
-		
-		
-
-		</div>
-	</section>	
-
-</div>
-	</section>		
+				
 	
-	<!--  商業短片大綱 -->
+<!--  商業短片大綱 -->
 			<div id="business_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
-					<div class="featured-text text-center text-lg-left">
+				<div class="featured-text text-center text-lg-left">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/WR7swDny4SY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						<h4>商業短片</h4>
-						<p class="text-black-50 mb-0">甚麼都拍甚麼都不奇怪，你想的到的我們都做得到</p>
-						<p class="mb-0 text-white-50">商業短片作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
-					</div>
-				</div>
-			</div>	    
-						</div>
-					</div>
+					<h4>商業短片</h4>
+					<p class="text-black-50 mb-0">甚麼都拍甚麼都不奇怪，你想的到的我們都做得到</p>
+					<p class="mb-0 text-white-50">商業短片作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
 				</div>
 			</div>
-		
-		
-		
-		
-		
-		
+				
 
-		</div>
-	</section>	
 <!--  孕媽咪寶寶大綱 -->
 			<div id="baby" class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-8 col-lg-7">  
@@ -378,6 +329,7 @@
 								<h4 class="text-white">孕媽咪寶寶</h4>
 								<p class="mb-0 text-white-50">孕媽咪寶寶作品 <a href="https://www.facebook.com/pg/LeShePhoto/photos/?tab=album&album_id=385217302186534">看更多</a></p>
 								<hr class="d-none d-lg-block mb-0 mr-0">
+							</div>
 						</div>
 					</div>
 				</div>
@@ -385,12 +337,20 @@
 		
 		
 		
+		<!-- 複製的是插入在這個位置 -->
 		
 		
 		
-
+		
+		
+		
+		
+		
+		
+<!--這2行是不要複製的-->
 		</div>
 	</section>		
+<!--這2行是不要複製的-->
 		
 	
 	
