--- a/index.html
+++ b/index.html
@@ -263,19 +263,23 @@
 			
 <!--  婚禮微電影大綱 -->
 			<div id="Wedding_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
-					<div class="featured-text text-center text-lg-left">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/oLgSEXCCtts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						<h4>婚禮微電影</h4>
-						<p class="text-black-50 mb-0">過程不能NG，流程不能重來，眼淚笑容親朋好友情感幫你紀錄。</p>
-						<p class="mb-0 text-white-50">婚禮微電影作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
-					</div>
+				<div class="col-xl-8 col-lg-7">  
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/oLgSEXCCtts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<div class="featured-text text-center text-lg-left">
+					<h4>婚禮微電影</h4>
+					<p class="text-black-50 mb-0">過程不能NG，流程不能重來，眼淚笑容親朋好友情感幫你紀錄。</p>
+					<p class="mb-0 text-white-50">婚禮微電影作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
+				</div>
 			</div>
 			
 		
 <!--  愛情微電影大綱 -->
 			<div id="Love_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
-				<div class="featured-text text-center text-lg-left">
+				<div class="col-xl-8 col-lg-7">  
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/aiOL4toLdZg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<div class="featured-text text-center text-lg-left">
 					<h4>愛情微電影</h4>
 					<p class="text-black-50 mb-0">邊拍邊玩，躺著拍，坐著拍，躺著玩，坐著玩，就是這樣好玩，留住婚紗的聲音。</p>
 					<p class="mb-0 text-white-50">愛情微電影作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
@@ -285,8 +289,10 @@
 	
 <!--  商業短片大綱 -->
 			<div id="business_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
-				<div class="featured-text text-center text-lg-left">
+				<div class="col-xl-8 col-lg-7">  
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/WR7swDny4SY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<div class="featured-text text-center text-lg-left">
 					<h4>商業短片</h4>
 					<p class="text-black-50 mb-0">甚麼都拍甚麼都不奇怪，你想的到的我們都做得到</p>
 					<p class="mb-0 text-white-50">商業短片作品 <a href="https://www.facebook.com/pg/LeShePhoto/videos/">看更多</a></p>
