youtube 加align="middle"

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 <!--  婚禮微電影大綱 -->
 			<div id="Wedding_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-8 col-lg-7">  
-					<iframe style="margin:0 auto;" width="560" height="315" src="https://www.youtube.com/embed/oLgSEXCCtts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe style="margin:0 auto;" align="middle" width="560" height="315" src="https://www.youtube.com/embed/oLgSEXCCtts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>				
 				<div class="col-xl-4 col-lg-5">
 					<div class="featured-text text-center text-lg-left">
@@ -279,7 +279,7 @@
 <!--  愛情微電影大綱 -->
 			<div id="Love_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-8 col-lg-7">  
-					<iframe style="margin:0 auto;" width="560" height="315" src="https://www.youtube.com/embed/aiOL4toLdZg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe style="margin:0 auto;" align="middle" width="560" height="315" src="https://www.youtube.com/embed/aiOL4toLdZg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>				
 				<div class="col-xl-4 col-lg-5">
 					<div class="featured-text text-center text-lg-left">
@@ -294,7 +294,7 @@
 <!--  商業短片大綱 -->
 			<div id="business_video" class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-8 col-lg-7">  
-					<iframe style="margin:0 auto;" width="560" height="315" src="https://www.youtube.com/embed/WR7swDny4SY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe style="margin:0 auto;" align="middle" width="560" height="315" src="https://www.youtube.com/embed/WR7swDny4SY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				
 				<div class="col-xl-4 col-lg-5">
