--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+<meta http-equiv="refresh" content="0;url=https://www.leshephoto.com/"/> 
+<script>window.location.href = 'https://www.leshephoto.com/';</script>
 
   <title>樂攝 - 看似簡單卻高度質感 </title>
 
